<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PengajuanSuratActivity">

    <LinearLayout
        android:id="@+id/logo1Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@mipmap/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strmikstikom"
            android:textSize="9pt"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SubmisionMailForm"
                android:textSize="9pt"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userDataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/logo1Container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>
                <EditText
                    android:id="@+id/submissionName"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/input_style_1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nim"/>
                <EditText
                    android:id="@+id/submissionNim"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/input_style_1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department"/>
                <EditText
                    android:id="@+id/submissionDepartmen"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/input_style_1"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lecture"/>
                <EditText
                    android:id="@+id/submissionlecture"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/input_style_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reason"/>
                <EditText
                    android:id="@+id/submissionReason"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/input_style_1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <Button
                        android:layout_width="80dp"
                        android:layout_height="40dp"/>
                    <Button
                        android:layout_width="80dp"
                        android:layout_height="40dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>