<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BAAKmainActivity">

    <LinearLayout
        android:id="@+id/accImageContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imgBAAKid"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/user"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baak"
            android:textSize="9pt"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/accImageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:onClick="mailIn"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/inbox"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suratMasuk"
                    android:textSize="8pt"
                    android:textAlignment="center"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:onClick="mailOut">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/outbox"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/suratKeluar"
                    android:textAlignment="center"
                    android:textSize="8pt"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:onClick="cancelation">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/cancelation"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pembatalan"
                    android:textAlignment="center"
                    android:textSize="8pt"/>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:onClick="disposition">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/disposittion"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/disposisi"
                    android:textAlignment="center"
                    android:textSize="8pt"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:onClick="report">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/report"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/laporan"
                    android:textAlignment="center"
                    android:textSize="8pt"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:onClick="addUser">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/adduser"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/user"
                    android:textAlignment="center"
                    android:textSize="8pt"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>