<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MahasiswaMainActivity">

    <LinearLayout
        android:id="@+id/accImageContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imgBAAKid"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/user"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="9pt"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/accImageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:onClick="filing">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/account"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pengajuan"
                    android:textAlignment="center"
                    android:textSize="8pt" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:onClick="mailStatus">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/mail_report"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/statusSurat"
                    android:textAlignment="center"
                    android:textSize="8pt"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:onClick="cancelation">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/cancelation"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pembatalan"
                    android:textAlignment="center"
                    android:textSize="8pt"/>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:onClick="logout">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/logout"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/logout"
                    android:textAlignment="center"
                    android:textSize="8pt"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>